--- a/src/app/cv/cv.component.scss
+++ b/src/app/cv/cv.component.scss
@@ -1,17 +1,12 @@
 @import "../../styles.scss";
 
 .name {
-  line-height: 1rem;
-  font-size: 26px;
+  font-size: 2.2rem;
   font-weight: 700;
 }
 
-.lead {
-  font-size: 1rem;
-}
-
 .about {
-  font-size: 0.8rem;
+  font-size: 1rem;
 }
 
 .cv-image {
@@ -32,21 +27,17 @@
 
 .social-media-list li a {
   font-size: 24px;
-  color: $passive-color;
+  color: $black-color;
 }
 
 .social-media-list li a:hover {
-  color: $hover-color;
-}
-
-.social-media-list li a:active {
-  color: $active-color;
+  color: $watermelon;
 }
 
 .cv {
   background-color: #fff;
   word-break: break-word;
-  font-size: 0.7rem;
+  font-size: 1rem;
 }
 
 .cv-right {
@@ -56,10 +47,14 @@
 
 .section-title {
   margin-bottom: 0.5rem;
-  color: $active-color;
-  font-size: 1rem;
+  color: $carbon;
+  font-size: 1.4rem;
   line-height: 1.8em;
   font-weight: 700;
+}
+
+.cvButton {
+  width: 100%;
 }
 
 .item {
@@ -69,20 +64,16 @@
 .item h3 {
   margin-bottom: 3px;
   font-weight: 700;
-  font-size: 0.9rem;
+  font-size: 1.2rem;
   line-height: 1.8em;
-  color: $passive-color;
+  color: $black-color;
 }
 
 .item h4 {
-  font-size: 0.8rem;
+  font-size: 1rem;
   line-height: 1em;
   margin-bottom: 3px;
   font-weight: 500;
-}
-
-.btn-outline-success {
-  width: 100%;
 }
 
 .cv.border {
@@ -93,7 +84,6 @@
   box-shadow: 3px 3px 1px 0;
 }
 
-
 .border {
-  color: $passive-color;
+  color: $black-color;
 }
