--- a/src/app/cv/cv.component.scss
+++ b/src/app/cv/cv.component.scss
@@ -6,12 +6,12 @@
 }
 
 .about {
-  font-size: 1rem;
+  font-size: 0.8rem;
 }
 
 .cv-image {
-  height: 320px;
-  width: 320px;
+  height: 300px;
+  width: 300px;
 }
 
 .social-media-list {
@@ -46,31 +46,31 @@
 }
 
 .section-title {
-  margin-bottom: 0.5rem;
   color: $carbon;
-  font-size: 1.4rem;
-  line-height: 1.8em;
+  font-size: 1.2rem;
   font-weight: 700;
 }
 
 .cvButton {
+  font-size: 1rem;
   width: 100%;
 }
 
 .item {
   padding-right: 3em;
+  font-size: 0.8rem;
 }
 
 .item h3 {
-  margin-bottom: 3px;
+  margin-bottom: 0;
   font-weight: 700;
-  font-size: 1.2rem;
+  font-size: 1rem;
   line-height: 1.8em;
   color: $black-color;
 }
 
 .item h4 {
-  font-size: 1rem;
+  font-size: 0.9rem;
   line-height: 1em;
   margin-bottom: 3px;
   font-weight: 500;
