make navigation close navigation bar.

--- a/src/app/vision/vision.component.scss
+++ b/src/app/vision/vision.component.scss
@@ -1,7 +1,8 @@
 @import "../../styles.scss";
 
 .software-craftsmanship-values {
-  padding: 1rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
   margin-right: 0;
   margin-left: 0;
   border-width: .2rem;
