add highlighting for results.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -34,31 +34,6 @@ hr {
   border-color: $black-color;
 }
 
-/*
-.btn {
-  border-width: 2px;
-  background-color: $hover-color;
-  border-color: $passive-color;
-  color: $background-color;
+.ngb-highlight{
+  background-color: #ff0;
 }
-
-.btn:hover {
-  background-color: $passive-color;
-  border-color: $active-color;
-  color: $background-color;
-}
-
-.btn:focus {
-  outline: 0;
-  box-shadow: 0 0 0 0.2rem $active-color;
-  background-color: $active-color;
-  border-color: $passive-color;
-  color: $background-color;
-}
-
-.btn:active {
-  background-color: $active-color;
-  border-color: $passive-color;
-  color: $background-color;
-}
-*/
