change color because it wasn't good.

--- a/src/app/pages/project/project.card.component.scss
+++ b/src/app/pages/project/project.card.component.scss
@@ -112,7 +112,10 @@ li a:hover {
     width: 100%;
     text-align: center;
     clear: both;
-    background-color: indianred;
-    border: 3px solid lightgrey;
+    background-color: rgba(0,0,0,.03);
+    border-color: #555555;
+    border-width: 2px;
+    border-style: solid;
+    border-radius: 4px;
   }
 }
