--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,7 +15,7 @@ html {
 }
 
 .header {
-  font-family: bree, sans-serif;
+  font-family: Roboto, serif;
   font-weight: 400;
   font-style: normal;
 }
