--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,42 +2,7 @@
 
 .body {
   background-color: $background-color;
-  font-family: bree, sans-serif;
+  font-family: Roboto, serif;
   font-weight: 400;
   font-style: normal;
 }
-
-/*Bree Regular
-
-font-family: bree, sans-serif;
-
-font-weight: 400;
-
-font-style: normal;
-
-
-Bree Bold
-
-font-family: bree, sans-serif;
-
-font-weight: 700;
-
-font-style: normal;
-
-
-Bree Oblique
-
-font-family: bree, sans-serif;
-
-font-weight: 400;
-
-font-style: italic;
-
-
-Bree Bold Oblique
-
-font-family: bree, sans-serif;
-
-font-weight: 700;
-
-font-style: italic;*/
