--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,22 +1,28 @@
 <header class="header">
   <nav class="navbar navbar-expand-lg navbar-light">
-        <span class="navbar-brand text">
-          Dieter Jordens
+    <div class="navbar-brand text">
+      Dieter Jordens
+    </div>
+
+    <div class="displayRight hidden-desktop">
+      <button class="hamburger hamburger--spin" [class.is-active]="!collapse" type="button" (click)="toggle()">
+        <span class="hamburger-box">
+          <span class="hamburger-inner"></span>
         </span>
-    <button class="navbar-toggler toggleNavBar"
-            type="button"
-            data-toggle="collapse"
-            data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
-            [attr.aria-expanded]="!isCollapsed"
-            aria-label="Toggle navigation"
-            (click)="toggle()">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent" [ngbCollapse]="isCollapsed">
-      <app-nav-options class="mr-auto"
-                       (navigated)="closeNavigationBar()"></app-nav-options>
+      </button>
+    </div>
+    <div class="navbar-nav hidden-mobile" style="width:100%">
+      <app-nav-options class="mr-auto"></app-nav-options>
       <app-language-selector></app-language-selector>
     </div>
   </nav>
+
+  <div class="container hidden-desktop" [@collapse]="collapse">
+    <div class="row">
+      <div class="col d-flex justify-content-center">
+        <app-nav-options class="mr-auto" (navigated)="toggle()"></app-nav-options>
+        <app-language-selector></app-language-selector>
+      </div>
+    </div>
+  </div>
 </header>
