hamburger animation prefer different

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,7 +5,7 @@
     </div>
 
     <div class="displayRight hidden-desktop">
-      <button class="hamburger hamburger--spin" [class.is-active]="!collapse" type="button" (click)="toggle()">
+      <button class="hamburger hamburger--spring" [class.is-active]="!collapse" type="button" (click)="toggle()">
         <span class="hamburger-box">
           <span class="hamburger-inner"></span>
         </span>
