Some optimizations to css loading

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,16 +1,8 @@
+@import '~bootstrap/dist/css/bootstrap.min.css';
+@import '~font-awesome/css/font-awesome.css';
 @import '~hamburgers/_sass/hamburgers/hamburgers.scss';
 
-$background-color: #EFEFEF;
-
-$sky: #CAEBF2;
-$carbon: #A9A9A9;
-$watermelon: #FF3B3F;
-
-$active-color: #778DA9;
-$hover-color: #415A77;
-$passive-color: #1B263B;
-$text-color: #0D1B2A;
-$black-color: black;
+@import "colors";
 
 html {
   background-color: $background-color;
