--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,9 +1,10 @@
 <header class="header">
-  <nav class="navbar navbar-expand-lg navbar-light">
-    <div class="navbar-brand text">
-      Dieter Jordens
-    </div>
-
+  <div class="theme">
+    <h1 class="pt-2 d-flex justify-content-center">Dieter Jordens</h1>
+    <h3 class="d-flex justify-content-center">Software & Data Engineer</h3>
+    <div class="d-flex justify-content-center"><img src="assets/images/dieter.gif" height="75px"></div>
+  </div>
+  <nav class="navbar navbar-expand-lg navbar-light theme">
     <div class="displayRight hidden-desktop">
       <button class="hamburger hamburger--spring" [class.is-active]="!collapse" type="button" (click)="toggle()">
         <span class="hamburger-box">
@@ -12,16 +13,14 @@
       </button>
     </div>
     <div class="navbar-nav hidden-mobile" style="width:100%">
-      <app-nav-options class="mr-auto"></app-nav-options>
-      <app-language-selector></app-language-selector>
+      <app-nav-options class="mr-auto ml-auto"></app-nav-options>
     </div>
   </nav>
-
-  <div class="container hidden-desktop" [@collapse]="collapse">
+  <app-language-selector class="language-selector"></app-language-selector>
+  <div class="container hidden-desktop theme" [@collapse]="collapse">
     <div class="row">
       <div class="col d-flex justify-content-center">
         <app-nav-options class="mr-auto" (navigated)="toggle()"></app-nav-options>
-        <app-language-selector></app-language-selector>
       </div>
     </div>
   </div>
