--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
 @import '~bootstrap/dist/css/bootstrap.min.css';
 @import '~font-awesome/css/font-awesome.css';
 @import '~hamburgers/_sass/hamburgers/hamburgers.scss';
-
+@import "~hover.css";
 @import "colors";
 
 html {
