Add some improvements implemented yesterday.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,8 @@
 <main class="body">
   <router-outlet></router-outlet>
 </main>
+<footer class="footer">
+  <div class=" text-center">
+    <span>&copy; Dieter Jordens 2020</span>
+  </div>
+</footer>
