--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,5 +1,11 @@
 @import "../../../colors";
 
+@media only screen and (max-width: 1000px) {
+  .hidden-mobile {
+    display: none !important;
+  }
+}
+
 .home {
   color: $black-color;
   background-color: $background-color;
@@ -30,13 +36,4 @@
   font-size: 1.2rem;
 }
 
-.website {
-  color: $watermelon;
-  font-size: 3rem;
-}
 
-@media (max-width: 1000px) {
-  .hidden-mobile {
-    display: none;
-  }
-}
