--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,11 +1,5 @@
 @import "../../../colors";
 
-@media only screen and (max-width: 1000px) {
-  .hidden-mobile {
-    display: none !important;
-  }
-}
-
 .home {
   color: $black-color;
   background-color: $background-color;
@@ -36,4 +30,7 @@
   font-size: 1.2rem;
 }
 
+.align-center{
+  text-align: center;
+}
 
