--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,10 +12,20 @@ html {
   font-family: Roboto, serif;
   font-weight: 400;
   font-style: normal;
+  min-height: 20vh;
+}
+
+.body {
+  min-height: 70vh;
 }
 
 .text {
   color: $text-color;
+}
+
+.footer {
+  width: 100%;
+  height: 100px;
 }
 
 hr {
@@ -24,4 +34,10 @@ hr {
 
 .ngb-highlight{
   background-color: #ff0;
+}
+
+@media only screen and (max-width: 1000px) {
+  .hidden-mobile {
+    display: none !important;
+  }
 }
