--- a/src/app/pages/cv/cv.component.scss
+++ b/src/app/pages/cv/cv.component.scss
@@ -19,6 +19,10 @@
   padding-left: 0;
 }
 
+.image-container {
+  text-align: center;
+}
+
 .social-media-list li {
   display: inline-block;
   padding: 12px;
@@ -26,11 +30,11 @@
 
 .social-media-list li a {
   font-size: 1.8rem;
-  color: $black-color;
+  color: black;
 }
 
 .social-media-list li a:hover {
-  color: $watermelon;
+  color: #ffa101;
 }
 
 .cv {
