not loading html if not needed.

--- a/src/app/pages/home/faq-option/faq-option.component.html
+++ b/src/app/pages/home/faq-option/faq-option.component.html
@@ -7,6 +7,7 @@
   </div>
 
   <div [@collapse]="collapse">
-    <div class="card-body" [innerHTML]="answer"></div>
+    <div class="card-body" *ngIf="!collapse" [innerHTML]="answer">
+    </div>
   </div>
 </div>
