--- a/src/app/header/nav-options/nav.options.component.html
+++ b/src/app/header/nav-options/nav.options.component.html
@@ -4,7 +4,7 @@
       <a class="nav-link navigation hvr-overline-from-center"
          [attr.data-navigation-option]="navigationOption.text"
          (click)="clickNavigation()"
-         routerLink="{{navigationOption.path}}">{{navigationOption.text | translate}}</a>
+         routerLink="{{navigationOption.path}}">{{navigationOption.text}}</a>
     </li>
   </ng-container>
 </ul>
