updated image urls to amazon s3 and banner home link

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <header class="header">
   <div class="theme pt-3">
-    <div class="d-flex justify-content-center"><img class="image-banner" src="assets/images/banner.png"></div>
+    <div class="d-flex justify-content-center"><img class="image-banner" src="assets/images/banner.png" routerLink=""></div>
   </div>
   <nav class="navbar navbar-expand-lg navbar-light theme">
     <div class="mr-auto ml-auto hidden-desktop">
