--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,22 @@
 <main class="body">
   <router-outlet></router-outlet>
 </main>
-<footer class="footer">
-  <div class=" text-center">
-    <span>&copy; Dieter Jordens 2021</span>
+<footer class="footer mt-3">
+  <div class="text-center">
+    <ul class="social-media-list">
+      <li>
+        <a href="https://www.linkedin.com/in/dieterjordens"><i class="fa fa-linkedin"></i></a>
+      </li>
+      <li>
+        <a href="https://twitter.com/Dieter_Jordens"><i class="fa fa-twitter"></i></a>
+      </li>
+      <li>
+        <a href="https://dieterjordens.medium.com/"><i class="fa fa-medium"></i></a>
+      </li>
+      <li>
+        <a href="mailto:dieter.jordens.consulting@gmail.com"><i class="fa fa-envelope-o"></i></a>
+      </li>
+    </ul>
+    <span><i class="fa fa-copyright"></i> Dieter Jordens IT Consulting | BE 0767.861.205</span>
   </div>
 </footer>
