--- a/src/app/pages/vision/vision.component.scss
+++ b/src/app/pages/vision/vision.component.scss
@@ -17,3 +17,13 @@
 .card-header {
   font-size: 2rem;
 }
+
+.card-title {
+  font-weight: bold;
+  font-size: 1.8rem;
+}
+
+.card-text-software{
+  max-width: 800px;
+  display: inline-block;
+}
