--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,6 +8,26 @@
 }
 
 .footer {
-  color: #FFFFFF;
+  color: whitesmoke;
   background-color: #31525B;
+}
+
+.social-media-list {
+  margin: auto;
+  text-align: center;
+  padding-left: 0;
+}
+
+.social-media-list li {
+  display: inline-block;
+  padding: 12px;
+}
+
+.social-media-list li a {
+  font-size: 1.8rem;
+  color: whitesmoke;
+}
+
+.social-media-list li a:hover {
+  color: #000000;
 }
