--- a/src/app/pages/home/faq-option/faq-option.component.html
+++ b/src/app/pages/home/faq-option/faq-option.component.html
@@ -1,8 +1,8 @@
-<div class="card mb-2">
+<div class="card mb-2" (click)="toggle()">
   <div class="card-header">
     <h5>
       <div class="question" [innerHTML]="question"></div>
-      <button class="toggle-answer-button" type="button" (click)="toggle()"><i class="fa" [ngClass]="collapse ? 'fa-plus' : 'fa-minus'"></i></button>
+      <button class="toggle-answer-button" type="button"><i class="fa" [ngClass]="collapse ? 'fa-plus' : 'fa-minus'"></i></button>
     </h5>
   </div>
 
