--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,36 +1,65 @@
 @import "../../../colors";
 
-.home {
-  color: $black-color;
-  background-color: $background-color;
-}
-
-.quote {
-  color: #c4d6e2;
-}
-
 .title {
-  border-bottom: 1.2px #c4d6e2 solid;
-  display: inline-block;
-  text-transform: uppercase;
-  color: #333;
-  font-size: 2em;
+  font-size: 3em;
+  padding-right: 50px;
 }
 
-.welcomeMessage {
-  color: $carbon;
-  font-size: 4rem;
+.header {
+  background-color: #31525B;
+  color: white;
 }
 
-.detailsMessage {
-  font-size: 1.2rem;
+.slant {
+  background-color: #31525B;
+  height: 150px;
+  clip-path: polygon(0 90%, 0 -0.2%, 100% -0.2%);
+  transform: translateZ(0);
 }
 
-.introductionMessage {
-  font-size: 1.2rem;
+.home {
+  overflow: hidden;
 }
 
-.align-center{
-  text-align: center;
+.about {
+  font-family: "Montserrat", sans-serif;
+}
+
+
+
+@media only screen and (max-width: 400px) {
+  .text-header {
+    width: 400px;
+    padding-left: 2%;
+    padding-right: 2%;
+  }
+}
+
+@media only screen and (min-width: 401px) {
+  .text-header {
+    width: 420px;
+  }
+
+  .header{
+    padding-left: 25%;
+    padding-right: 25%;
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+  .image {
+    display: none;
+  }
+}
+
+@media only screen and (min-width: 1001px) {
+  .image{
+    padding-left: 200px;
+  }
+
+  .grid-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
 }
 
